--- a/sass/modules/_footer.scss
+++ b/sass/modules/_footer.scss
@@ -5,13 +5,22 @@
 }
 
 .site-footer_nav {
-	float:left;
 	ul {
 		list-style:none;margin:0;padding:0;
 		@include clearfix();
 	}
+	li {
+		display: block;
+	}
 }
 
 .site-footer_copyright {
-	float: right;
+	font-size: .9em;
+}
+
+
+@media (min-width:$bp-md) {
+	
+	
+
 }
