--- a/sass/base/_settings.scss
+++ b/sass/base/_settings.scss
@@ -19,9 +19,9 @@ $maroon:  #85144B;
 $white:  #fff;
 $silver: #ddd;
 $gray:   #aaa;
-$black:  #111;
+$black:  #242424;
 
-$primary: $blue;
+$primary: $red;
 $secondary: $lime;
 
 
