--- a/sass/modules/_post.scss
+++ b/sass/modules/_post.scss
@@ -1,5 +1,5 @@
 
 
-.content-index, .content-singlepost {
-	padding: 40px 20px;
+.content-index, .content-singlepost, .content-archive {
+	padding: 40px 20px 60px;
 }
