--- a/sass/modules/_general.scss
+++ b/sass/modules/_general.scss
@@ -28,28 +28,9 @@
 
 
 
-//default inline anchor style
-a {
-	color: $primary;
-	background: transparent;
-	text-decoration: none;
-	border-bottom: 1px solid darken($white,10%);
-
-    
-	//be aware that that without a focus outline, 
-	//it's impossible to tab through the site
-  &:focus {
-      outline: thin dotted;
-  }
-  &:hover,
-  &:active {
-      outline: 0;
-  }
-}
-
 //button styles
 .button {
-	@include button();
+	@include button($font-size:.9em);
 }
 
 //site wrappers/containers
