restructure some sass

--- a/sass/admin.scss
+++ b/sass/admin.scss
@@ -1,9 +1,12 @@
 
 //Login page & admin screen css
 //-------------------------------------//
-
-//login screen - keep form and logo in same overlay height/width,
+//compiles to assets/css/admin.css
+//login screen - keep form and logo in same height/width,
 //because wp shows it in iframe in some cases
+
+//make sure to use body.class in selectors where required
+//each page on admin has a unique body class
 body.login { 
   background-color: #eaeaea;
 	
@@ -29,7 +32,10 @@ body.login {
 
 
 
-// hides front page settings from client 
+// Hide front-page settings
+//---------------------------------------//
+// this keeps changes from being made in the admin that would 
+// that would 'break' a clients site 
 .options-reading-php .form-table tbody tr:first-child {
     display: none;
 }
