--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1323,6 +1323,11 @@ cite {
 .magicon-rss-alt:before {
   content: "\e75f"; }
 
+*, *:before, *:after {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
+
 ::-moz-selection {
   background: #FF4136;
   color: #fff;
@@ -1341,6 +1346,7 @@ cite {
   font-size: 0.9em;
   text-transform: uppercase;
   font-weight: bold;
+  border: none;
   -moz-transition: all 0.25s ease;
   -o-transition: all 0.25s ease;
   -webkit-transition: all 0.25s ease;
@@ -1412,6 +1418,14 @@ cite {
 .content-index, .content-singlepost, .content-archive {
   padding: 40px 20px 60px; }
 
+@media (min-width: 580px) {
+  .content-archive_left {
+    float: left;
+    width: 66.66667%; }
+
+  .content-archive_right {
+    float: left;
+    width: 33.33333%; } }
 .site-footer {
   padding: 20px;
   border-top: 1px solid #f2f2f2; }
@@ -1430,3 +1444,29 @@ cite {
 
 .content-notfound {
   padding: 50px 20px 80px; }
+
+input[type="text"], input[type="email"], input[type="search"],
+input[type="tel"], input[type="url"], input[type="number"], textarea {
+  display: block;
+  width: 100%;
+  height: 50px;
+  border: 2px solid #e6e6e6; }
+
+#searchform {
+  max-width: 500px; }
+
+#searchsubmit {
+  display: inline-block;
+  background: #FF4136;
+  color: #fff;
+  padding: 12px 25px;
+  font-size: 1em;
+  text-transform: uppercase;
+  font-weight: bold;
+  border: none;
+  -moz-transition: all 0.25s ease;
+  -o-transition: all 0.25s ease;
+  -webkit-transition: all 0.25s ease;
+  transition: all 0.25s ease; }
+  #searchsubmit:hover {
+    background: #ff544a; }
