--- a/sass/base/_mixins.scss
+++ b/sass/base/_mixins.scss
@@ -10,6 +10,7 @@
 	font-size: $font-size;
 	text-transform: uppercase;
 	font-weight: bold;
+	border: none;
 	@include transition(all .25s ease);
 	&:hover {
 		background: tint($bg,10%);
