--- a/sass/modules/_forms.scss
+++ b/sass/modules/_forms.scss
@@ -1,5 +1,26 @@
 
 
-input[type="text"], input[type="email"] {
-	
+input[type="text"], input[type="email"], input[type="search"],
+input[type="tel"], input[type="url"], input[type="number"], textarea {
+	display: block;
+	width: 100%;
+	height: 50px;
+	border: 2px solid darken($white,10%);
+
+	&:focus {
+
+	}
 }
+
+
+
+
+
+#searchform {
+	max-width: 500px;
+}
+
+#searchsubmit {
+	@include button();
+}
+
