admin mods & customizer examples

--- a/_scss/admin.scss
+++ b/_scss/admin.scss
@@ -41,6 +41,7 @@ body.login {
 //---------------------------------------//
 // this keeps changes from being made in the admin that would 
 // that would 'break' a clients site 
-.options-reading-php .form-table tbody tr:first-child {
-    display: none;
-}
+
+// .options-reading-php .form-table tbody tr:first-child {
+//     display: none;
+// }
